# frequenz-microgrid-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  build.rs
.github/: RELEASE_NOTES.template.md
.github/workflows/: ci.yaml  release.yaml
examples/: bounds.rs  logical_meter.rs
src/: bounds.rs  client.rs  error.rs  lib.rs  logical_meter.rs  metric.rs  microgrid.rs  proto.rs  quantity.rs  sample.rs  wall_clock_timer.rs
src/client/: instruction.rs  microgrid_api_client.rs  microgrid_client_actor.rs  microgrid_client_handle.rs  proto.rs  retry_tracker.rs  test_utils.rs
src/client/proto/: electrical_component.rs
src/client/test_utils/: tokio_synced_clock.rs
src/logical_meter/: config.rs  formula.rs  logical_meter_actor.rs  logical_meter_handle.rs  metric.rs
src/logical_meter/formula/: aggregation_formula.rs  async_formula.rs  coalesce_formula.rs  graph_formula.rs  graph_formula_provider.rs
src/logical_meter/formula/async_formula/: application_methods.rs  composition.rs
src/logical_meter/metric/: metric_trait.rs
src/microgrid/: battery_bounds_tracker.rs  battery_pool.rs  bounds_aggregation.rs  pool_bounds_tracker.rs  pool_broadcast.rs  pool_validation.rs  pv_bounds_tracker.rs  pv_pool.rs  telemetry_tracker.rs  test_support.rs
src/microgrid/telemetry_tracker/: battery_pool_telemetry_tracker.rs  component_partition.rs  component_telemetry_tracker.rs  inverter_battery_group_telemetry_tracker.rs  pv_pool_telemetry_tracker.rs
src/proto/: graph.rs
src/quantity/: current.rs  energy.rs  frequency.rs  percentage.rs  power.rs  reactive_power.rs  voltage.rs
