[package]
name = "frequenz-microgrid-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "frequenz_microgrid"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4"
frequenz-microgrid-component-graph = { git = "https://github.com/frequenz-floss/frequenz-microgrid-component-graph-rs.git", rev = "0b28f99" }
frequenz-microgrid-formula-engine = { git = "https://github.com/frequenz-floss/frequenz-microgrid-formula-engine-rs.git", rev = "463414a" }
frequenz-resampling = { git = "https://github.com/frequenz-floss/frequenz-resampling-rs.git", rev = "ce84d66" }
futures = "0.3.31"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.45", features = ["rt", "rt-multi-thread"] }
tonic = "0.13"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tokio = { version = "1.45", features = ["test-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }


[build-dependencies]
prost-build = { version = "0.13", features = ["cleanup-markdown"] }
tonic-build = "0.13"
